--- a/build.yaml
+++ b/build.yaml
@@ -20,6 +20,6 @@
 ---
 include:
   - board: nice_nano_v2
-    shield: ulpmp
+    shield: benball44
   - board: nice_nano_v2
     shield: settings_reset
