--- a/config/west.yml
+++ b/config/west.yml
@@ -2,17 +2,16 @@ manifest:
   remotes:
     - name: zmkfirmware
       url-base: https://github.com/zmkfirmware
-    # Additional modules containing boards/shields/custom code can be listed here as well
-    # See https://docs.zephyrproject.org/3.2.0/develop/west/manifest.html#projects
-    - name: benefitbug
-      url-base: https://github.com/benefitbug
+    - name: infused-kim
+      url-base: https://github.com/infused-kim
+    - name: petejohanson
+      url-base: https://github.com/petejohanson
+    - name: urob
+      url-base: https://github.com/urob
   projects:
     - name: zmk
       remote: zmkfirmware
       revision: main
       import: app/west.yml
-    - name: zmk-benpoint-module
-      remote: benefitbug
-      revision: main
   self:
     path: config
