--- a/boards/shields/benpoint/benpoint.dtsi
+++ b/boards/shields/benpoint/benpoint.dtsi
@@ -1,5 +1,15 @@
 #include <dt-bindings/zmk/matrix_transform.h> // Put this with the other includes at the top of your dtsi
 
+
+/ {
+    physical_layout0: physical_layout_0 { // First physical layout, use different naming for other layouts
+        compatible = "zmk,physical-layout";
+        display-name = "Default Layout";
+        kscan = <&kscan0>; // Label of the kscan node, optional if all layouts use the same
+        transform = <&default_transform>; // Label of the matrix transform for this layout
+    };
+};
+
 / {
     kscan0: kscan0 {
         compatible = "zmk,kscan-gpio-matrix";
