--- a/boards/shields/benpoint/benpoint.dtsi
+++ b/boards/shields/benpoint/benpoint.dtsi
@@ -52,6 +52,7 @@
     chosen {
         zmk,kscan = &kscan0;
         zmk,physical-layout = &physical_layout0;
+        zmk,matrix-transform = &default_transform;
         // Other chosen items
     };
 };
