--- a/build.yaml
+++ b/build.yaml
@@ -23,6 +23,6 @@ include:
     shield: benpoint_left
   - board: nice_nano_v2
     shield: benpoint_right
-    snippet: zmk-usb-logging
+#    snippet: zmk-usb-logging
   - board: nice_nano_v2
     shield: settings_reset
