--- a/boards/shields/benpoint/benpoint.dtsi
+++ b/boards/shields/benpoint/benpoint.dtsi
@@ -1,4 +1,5 @@
 #include <dt-bindings/zmk/matrix_transform.h> // Put this with the other includes at the top of your dtsi
+#include "benpoint-layouts.dtsi" // The layout file required for zmk studio support
 
 
 / {
@@ -52,7 +53,8 @@
     chosen {
         zmk,kscan = &kscan0;
         zmk,physical-layout = &physical_layout0;
-        zmk,matrix-transform = &default_transform;
+        // following matrix transform is commented out for zmk studio support 
+        // zmk,matrix-transform = &default_transform;
         // Other chosen items
     };
 };
