--- a/build.yaml
+++ b/build.yaml
@@ -23,6 +23,8 @@ include:
     shield: benpoint_left
   - board: nice_nano_v2
     shield: benpoint_right
-#    snippet: zmk-usb-logging
+    snippet: zmk-usb-logging
+    snippet: studio-rpc-usb-uart
+    cmake-args: -DCONFIG_ZMK_STUDIO=y
   - board: nice_nano_v2
     shield: settings_reset
