--- a/build.yaml
+++ b/build.yaml
@@ -20,7 +20,7 @@
 ---
 include:
   - board: nice_nano_v2
-    shield: benpoint_left
+    shield: benpoint_left nice_view
   - board: nice_nano_v2
     shield: benpoint_right
     snippet: zmk-usb-logging studio-rpc-usb-uart
