--- a/config/include/mouse_tp.dtsi
+++ b/config/include/mouse_tp.dtsi
@@ -3,6 +3,8 @@
   #include <dt-bindings/zmk/mouse_settings.h>
   #include <behaviors/mouse_keys.dtsi>
   #include <behaviors/mouse_setting.dtsi>
+  #include <input/processors.dtsi>
+
 
  /*
   * Key Behaviors to adjust settings
@@ -74,7 +76,18 @@
     * Input Listener Config
     */
 
-   // Disable this following input listener, not compatible with zmk main
+  
+   &mouse_ps2_input_listener {
+    input-processors = <&zip_xy_transform (INPUT_TRANSFORM_X_INVERT)>;
+
+    scroller {
+        layers = <5>;
+        input-processors = <&zip_xy_to_scroll_mapper>;
+        process-next;
+    };
+
+  }
+
    // &mouse_ps2_input_listener {
 
       // Adjust pointing device axes.
@@ -103,7 +116,7 @@
     * Mouse Driver Settings
     */
 
-    &mouse_ps2 {
+    // &mouse_ps2 {
 
       // How sensitive the TP is (Default: 128)
       // tp-sensitivity = <128>;
@@ -133,7 +146,7 @@
       // Alternatively consider achieving the same effect using the
       //  `input-listener` settings below.
       // tp-xy-swap;
-      tp-x-invert;
+      // tp-x-invert;
       // tp-y-invert;
 
 
@@ -161,7 +174,7 @@
       // for trackpoints
       // scroll-mode;
 
-    };
+    // };
 
     // Enable PS/2 Mouse Devices
     // In `your_keyboard_right.overlay` all devices have `status = "disabled"`.
