--- a/config/include/mouse_tp.dtsi
+++ b/config/include/mouse_tp.dtsi
@@ -78,7 +78,7 @@
 
   
     &mouse_ps2_input_listener {
-      input-processors = <&zip_xy_transform (INPUT_TRANSFORM_X_INVERT)>;
+    //  input-processors = <&zip_xy_transform (INPUT_TRANSFORM_X_INVERT)>;
       
       scroller {
         layers = <5>;
