--- a/config/include/mouse_tp.dtsi
+++ b/config/include/mouse_tp.dtsi
@@ -78,13 +78,12 @@
 
   
     &mouse_ps2_input_listener {
-    //  input-processors = <&zip_xy_transform (INPUT_TRANSFORM_X_INVERT)>;
+        input-processors = <&zip_xy_transform (INPUT_TRANSFORM_X_INVERT)>;
       
-      scroller {
-        layers = <5>;
-        input-processors = <&zip_xy_to_scroll_mapper>;
-        process-next;
-      };
+        scroller {
+          layers = <5>;
+          input-processors = <&zip_xy_to_scroll_mapper>;
+        };
     };
 
    // &mouse_ps2_input_listener {
