--- a/config/include/mouse_tp.dtsi
+++ b/config/include/mouse_tp.dtsi
@@ -82,7 +82,7 @@
         input-processors = <&zip_xy_transform (INPUT_TRANSFORM_X_INVERT)>;
       
         scroller {
-          layers = <TP>;
+          layers = <5>;
           input-processors = <&zip_xy_to_scroll_mapper>;
         };
     };
