--- a/config/include/mouse_tp.dtsi
+++ b/config/include/mouse_tp.dtsi
@@ -83,7 +83,7 @@
       
         scroller {
           layers = <3>;
-          input-processors = <&zip_xy_to_scroll_mapper>, <&zip_xy_transform (INPUT_TRANSFORM_X_INVERT)>, <&zip_xy_scaler 1 2>;
+          input-processors = <&zip_xy_to_scroll_mapper>;
           process-next;
         };
     };
