--- a/build.yaml
+++ b/build.yaml
@@ -23,7 +23,7 @@ include:
     shield: benpoint_left nice_view_adapter nice_view
   - board: nice_nano_v2
     shield: benpoint_right nice_view_adapter nice_view
-    snippet: studio-rpc-usb-uart
+    snippet: zmk-usb-logging studio-rpc-usb-uart
     cmake-args: -DCONFIG_ZMK_STUDIO=y
   - board: nice_nano_v2
     shield: settings_reset
