--- a/config/west.yml
+++ b/config/west.yml
@@ -8,6 +8,8 @@ manifest:
       url-base: https://github.com/petejohanson
     - name: urob
       url-base: https://github.com/urob
+    - name: infely
+      url-base: https://github.com/infely
 
   projects:
 
@@ -59,6 +61,11 @@ manifest:
     # Module for PS/2 mouse & TP driver
     - name: kb_zmk_ps2_mouse_trackpoint_driver
       remote: infused-kim
+      revision: main
+
+      
+    - name: nice-view-battery
+      remote: infely
       revision: main
 
   self:
