--- a/config/benpoint.conf
+++ b/config/benpoint.conf
@@ -72,3 +72,11 @@
 
 # Enable experimental BLE settings
 # CONFIG_ZMK_BLE_EXPERIMENTAL_CONN=y
+
+# Uncomment the following line to enable deep sleep
+# CONFIG_ZMK_SLEEP=y
+
+# Uncomment the following line to enable USB Logging (this increases power usage by a significant amount, turn it off when not in use)
+CONFIG_ZMK_DISPLAY=y
+CONFIG_ZMK_EXT_POWER=y
+CONFIG_ZMK_PM_SOFT_OFF=y
