--- a/boards/shields/benpoint/benpoint.conf
+++ b/boards/shields/benpoint/benpoint.conf
@@ -78,3 +78,4 @@
 
 # Uncomment the following line to enable USB Logging (this increases power usage by a significant amount, turn it off when not in use)
 CONFIG_ZMK_EXT_POWER=y
+CONFIG_ZMK_PM_SOFT_OFF=y
