--- a/config/mouse_tp.dtsi
+++ b/config/mouse_tp.dtsi
@@ -83,7 +83,7 @@
       
         scroller {
           layers = <3>;
-          input-processors = <&zip_xy_transform (INPUT_TRANSFORM_XY_SWAP)>, <&zip_xy_to_scroll_mapper>;
+          input-processors = <&zip_xy_transform (INPUT_TRANSFORM_XY_SWAP)>, <&zip_xy_scaler 1 3>, <&zip_xy_to_scroll_mapper>;
           process-next;
         };
     };
