--- a/boards/shields/benpoint/benpoint.conf
+++ b/boards/shields/benpoint/benpoint.conf
@@ -74,7 +74,7 @@
 # CONFIG_ZMK_BLE_EXPERIMENTAL_CONN=y
 
 # Uncomment the following line to enable deep sleep
-CONFIG_ZMK_SLEEP=y
+# CONFIG_ZMK_SLEEP=y
 
 # Uncomment the following line to enable USB Logging (this increases power usage by a significant amount, turn it off when not in use)
 CONFIG_ZMK_PM_SOFT_OFF=y
