--- a/config/west.yml
+++ b/config/west.yml
@@ -59,9 +59,9 @@ manifest:
     #
 
     # Module for PS/2 mouse & TP driver
-    - name: kb_zmk_ps2_mouse_trackpoint_driver
-      remote: infused-kim
-      revision: main
+    #- name: kb_zmk_ps2_mouse_trackpoint_driver
+    #  remote: infused-kim
+    #  revision: main
 
       
     - name: nice-view-battery
